added scroll lines and section about

--- a/index.html
+++ b/index.html
@@ -1,42 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/images/logo.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/global.scss" />
-    <title>CPS макет</title>
-  </head>
-  <body>
-    <header class="header">
-      <ul class="header__navigation">
-        <li class="header__navigation--link">
-          <img src="./src/images/burger.svg" />
-        </li>
-        <li class="header__navigation--logo">
-          <img src="./src/images/logo.svg" />
-        </li>
 
-        <li class="header__navigation--link-hidden">
-          <img src="./src/images/call.svg" />
-        </li>
-        <li class="header__navigation--link-hidden">
-          <img src="./src/images/message.svg" />
-        </li>
-        <li class="header__navigation--link-hidden">
-          <img src="./src/images/user.svg" />
-        </li>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/src/images/logo.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="src/global.scss" />
+  <title>CPS макет</title>
+</head>
 
-        <li class="header__navigation--divider">
-        </li>
+<body>
+  <header class="header">
+    <ul class="header__navigation">
+      <li class="header__navigation--link">
+        <img src="./src/images/burger.svg" />
+      </li>
+      <li class="header__navigation--logo">
+        <img src="./src/images/logo.svg" />
+      </li>
 
-        <li class="header__navigation--link">
-          <img src="./src/images/tools.svg" />
-        </li>
-        <li class="header__navigation--link">
-          <img src="./src/images/search.svg" />
-        </li>
-      </ul>
-    </header>
-  </body>
+      <li class="header__navigation--link-hidden">
+        <img src="./src/images/call.svg" />
+      </li>
+      <li class="header__navigation--link-hidden">
+        <img src="./src/images/message.svg" />
+      </li>
+      <li class="header__navigation--link-hidden">
+        <img src="./src/images/user.svg" />
+      </li>
+
+      <li class="header__navigation--divider">
+      </li>
+
+      <li class="header__navigation--link">
+        <img src="./src/images/tools.svg" />
+      </li>
+      <li class="header__navigation--link">
+        <img src="./src/images/search.svg" />
+      </li>
+    </ul>
+  </header>
+
+  <div class="services">
+    <h1>Услуги и сервисы</h1>
+    <div class="services__container">
+      <div class="services__container--slide">
+        Ремонтируемые устройства
+      </div>
+      <div class="services__container--slide">
+        Дополнительные услуги
+      </div>
+      <div class="services__container--slide">
+        Цены на услуги
+      </div>
+      <div class="services__container--slide">
+        Адреса сервисных центров
+      </div>
+      <div class="services__container--slide">
+        Специальные цены
+      </div>
+    </div>
+  </div>
+
+  <div class="about">
+    <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell. Т
+      олько у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
+    <div class="about__more">
+      <img src="./src/images/стрелка.svg">
+      <p>Читать далее</p>
+    </div>
+  </div>
+  <img class='company' src="./src/images/cps_image.png">
+
+  <div class="repair">
+    <div class="repair__head">
+      <p>РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</p>
+    </div>
+    <div class="repair__container">
+      <div class="repair__container--slide">
+        <img class="logo-company" src="./src/images/lenovo.png">
+        <img class="strelka" src="./src/images/go.png">
+      </div>
+      <div class="repair__container--slide">
+        <img class="logo-company" src="./src/images/samsung.png">
+        <img class="strelka" src="./src/images/go.png">
+      </div>
+      <div class="repair__container--slide">
+        <img class="logo-company" src="./src/images/acer.png">
+        <img class="strelka" src="./src/images/go.png">
+      </div>
+      <div class="repair__container--slide">
+        <img class="logo-company" src="./src/images/hp.png">
+        <img class="strelka" src="./src/images/go.png">
+      </div>
+      <div class="repair__container--slide">
+        <img class="logo-company" src="./src/images/apple.png">
+        <img class="strelka" src="./src/images/go.png">
+      </div>
+      <div class="repair__container--slide">
+        <img class="logo-company" src="./src/images/bosh.png">
+        <img class="strelka" src="./src/images/go.png">
+      </div>
+    </div>
+  </div>
+
+</body>
+
 </html>
