Главная страница мобильная версия без адаптива

--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
       <li class="header__navigation--link">
         <img src="./src/images/burger.svg" />
       </li>
+
+      <li class="header__navigation--divider1">
+      </li>
+
       <li class="header__navigation--logo">
         <img src="./src/images/logo.svg" />
       </li>
-
       <li class="header__navigation--link-hidden">
         <img src="./src/images/call.svg" />
       </li>
@@ -63,8 +66,8 @@
   </div>
 
   <div class="about">
-    <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell. Т
-      олько у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
+    <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell.
+      Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
     <div class="about__more">
       <img src="./src/images/стрелка.svg">
       <p>Читать далее</p>
@@ -77,32 +80,161 @@
       <p>РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</p>
     </div>
     <div class="repair__container">
-      <div class="repair__container--slide">
+      <div class="repair__container--slideBrand">
         <img class="logo-company" src="./src/images/lenovo.png">
-        <img class="strelka" src="./src/images/go.png">
+        <img class="go-btn" src="./src/images/go.png">
       </div>
-      <div class="repair__container--slide">
+      <div class="repair__container--slideBrand">
         <img class="logo-company" src="./src/images/samsung.png">
-        <img class="strelka" src="./src/images/go.png">
+        <img class="go-btn" src="./src/images/go.png">
       </div>
-      <div class="repair__container--slide">
+      <div class="repair__container--slideBrand">
         <img class="logo-company" src="./src/images/acer.png">
-        <img class="strelka" src="./src/images/go.png">
+        <img class="go-btn" src="./src/images/go.png">
       </div>
-      <div class="repair__container--slide">
+      <div class="repair__container--slideBrand">
         <img class="logo-company" src="./src/images/hp.png">
-        <img class="strelka" src="./src/images/go.png">
+        <img class="go-btn" src="./src/images/go.png">
       </div>
-      <div class="repair__container--slide">
+      <div class="repair__container--slideBrand">
         <img class="logo-company" src="./src/images/apple.png">
-        <img class="strelka" src="./src/images/go.png">
+        <img class="go-btn" src="./src/images/go.png">
       </div>
-      <div class="repair__container--slide">
+      <div class="repair__container--slideBrand">
         <img class="logo-company" src="./src/images/bosh.png">
-        <img class="strelka" src="./src/images/go.png">
+        <img class="go-btn" src="./src/images/go.png">
       </div>
     </div>
   </div>
+
+  <div class="repair">
+    <div class="repair__head">
+      <p>РЕМОНТ РАЗЛИЧНЫХ ВИДОВ ТЕХНИКИ</p>
+    </div>
+    <div class="repair__container">
+      <div class="repair__container--slideTech">
+        <p class="rep_txt">Ремонт ноутбуков</p>
+        <img class="go-btn" src="./src/images/go.png">
+      </div>
+      <div class="repair__container--slideTech">
+        <p class="rep_txt">Ремонт планшетов</p>
+        <img class="go-btn" src="./src/images/go.png">
+      </div>
+      <div class="repair__container--slideTech">
+        <p class="rep_txt">Ремонт ПК</p>
+        <img class="go-btn" src="./src/images/go.png">
+      </div>
+      <div class="repair__container--slideTech">
+        <p class="rep_txt">Ремонт мониторов</p>
+        <img class="go-btn" src="./src/images/go.png">
+      </div>
+    </div>
+  </div>
+
+  <div class="repair">
+    <div class="repair__head">
+      <p>ЦЕНЫ НА УСЛУГИ</p>
+    </div>
+    <div class="repair__container">
+      <div class="repair__container--slidePrice">
+        <div class="slidePrice-element">
+          <h3>Ремонтные услуги</h3>
+          <p>Тестирование с выдачей технического заключения</p>
+        </div>
+        <div class="slidePrice-element">
+          <h3>Цена</h3>
+          <p>1000 р</p>
+        </div>
+        <div class="slidePrice-element">
+          <h3>Срок</h3>
+          <p>30-120 мин</p>
+        </div>
+        <button class="order-btn">Заказать ></button>
+      </div>
+
+      <div class="repair__container--slidePrice">
+        <div class="slidePrice-element">
+          <h3>Ремонтные услуги</h3>
+          <p>Диагностика</p>
+        </div>
+        <div class="slidePrice-element">
+          <h3>Цена</h3>
+          <p>Бесплатно</p>
+        </div>
+        <div class="slidePrice-element">
+          <h3>Срок</h3>
+          <p>30 мин</p>
+        </div>
+        <button class="order-btn">Заказать ></button>
+      </div>
+
+      <div class="repair__container--slidePrice">
+        <div class="slidePrice-element">
+          <h3>Ремонтные услуги</h3>
+          <p>Замена дисплея</p>
+        </div>
+        <div class="slidePrice-element">
+          <h3>Цена</h3>
+          <p>1000 р</p>
+        </div>
+        <div class="slidePrice-element">
+          <h3>Срок</h3>
+          <p>30-120 мин</p>
+        </div>
+        <button class="order-btn">Заказать ></button>
+      </div>
+
+      <div class="repair__container--slidePrice">
+        <div class="slidePrice-element">
+          <h3>Ремонтные услуги</h3>
+          <p>Замена полифонического динамика</p>
+        </div>
+        <div class="slidePrice-element">
+          <h3>Цена</h3>
+          <p>1000 р</p>
+        </div>
+        <div class="slidePrice-element">
+          <h3>Срок</h3>
+          <p>30-120 мин</p>
+        </div>
+        <button class="order-btn">Заказать ></button>
+      </div>
+
+      <div class="repair__container--slidePrice">
+        <div class="slidePrice-element">
+          <h3>Ремонтные услуги</h3>
+          <p>Замена программного обеспечения</p>
+        </div>
+        <div class="slidePrice-element">
+          <h3>Цена</h3>
+          <p>1000 р</p>
+        </div>
+        <div class="slidePrice-element">
+          <h3>Срок</h3>
+          <p>30-120 мин</p>
+        </div>
+        <button class="order-btn">Заказать ></button>
+      </div>
+    </div>
+  </div>
+
+  <div class="about">
+    <p>Все цены указаны с учетом НДС. Стоимость ремонта указана на единичную услугу. Для получения коммерческого
+      предложения на постоянное обслуживание, оставьте заявку.</p>
+  </div>
+
+  <div class="get">
+    <p>Получить коммерческое предложение
+      <span class="get-img">></span>
+    </p>
+  </div>
+
+  <footer class="footer">
+    <p class="footer__row">© 2019 CPS
+      Разработано командой Apesong </p>
+    <p class="footer__row">Политика конфиденциальности</p>
+    <p class="footer__row">Информация, размещенная на данной странице, не является публичной офертой</p>
+  </footer>
 
 </body>
 
