Media 768px done

--- a/index.html
+++ b/index.html
@@ -12,35 +12,35 @@
 <body>
   <header class="header">
     <ul class="header__navigation">
-      <li class="header__navigation--link">
-        <img src="./src/images/burger.svg" />
-      </li>
-
-      <li class="header__navigation--divider1">
-      </li>
-
-      <li class="header__navigation--logo">
-        <img src="./src/images/logo.svg" />
-      </li>
-      <li class="header__navigation--link-hidden">
-        <img src="./src/images/call.svg" />
-      </li>
-      <li class="header__navigation--link-hidden">
-        <img src="./src/images/message.svg" />
-      </li>
-      <li class="header__navigation--link-hidden">
-        <img src="./src/images/user.svg" />
-      </li>
-
-      <li class="header__navigation--divider">
-      </li>
-
-      <li class="header__navigation--link">
-        <img src="./src/images/tools.svg" />
-      </li>
-      <li class="header__navigation--link">
-        <img src="./src/images/search.svg" />
-      </li>
+      <div class="header-left">
+        <li class="header__navigation--link left">
+          <img src="./src/images/burger.svg" />
+        </li>
+        <li class="header__navigation--divider1 left">
+        </li>
+        <li class="header__navigation--logo left">
+          <img src="./src/images/logo.svg" />
+        </li>
+      </div>
+      <div class="header-right">
+        <li class="header__navigation--link-hidden right">
+          <img src="./src/images/call.svg" />
+        </li>
+        <li class="header__navigation--link-hidden right">
+          <img src="./src/images/message.svg" />
+        </li>
+        <li class="header__navigation--link-hidden right">
+          <img src="./src/images/user.svg" />
+        </li>
+        <li class="header__navigation--divider right">
+        </li>
+        <li class="header__navigation--link right">
+          <img src="./src/images/tools.svg" />
+        </li>
+        <li class="header__navigation--link right">
+          <img src="./src/images/search.svg" />
+        </li>
+      </div>
     </ul>
   </header>
 
@@ -66,14 +66,19 @@
   </div>
 
   <div class="about">
-    <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell.
-      Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
-    <div class="about__more">
-      <img src="./src/images/стрелка.svg">
-      <p>Читать далее</p>
+    <div class="about-text">
+      <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell.
+        Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
+      <p class="about-text--hidden">
+        Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера</p>
+      <div class="about-text__more">
+        <img src="./src/images/стрелка.svg">
+        <p>Читать далее</p>
+      </div>
     </div>
+    <img class='company' src="./src/images/cps_image.png">
   </div>
-  <img class='company' src="./src/images/cps_image.png">
+
 
   <div class="repair">
     <div class="repair__head">
@@ -105,6 +110,10 @@
         <img class="go-btn" src="./src/images/go.png">
       </div>
     </div>
+    <div class="about-text__more-hidden">
+      <img src="./src/images/стрелка.svg">
+      <p>Показать всё</p>
+    </div>
   </div>
 
   <div class="repair">
@@ -129,15 +138,32 @@
         <img class="go-btn" src="./src/images/go.png">
       </div>
     </div>
+    <div class="about-text__more-hidden">
+      <img src="./src/images/стрелка.svg">
+      <p>Показать всё</p>
+    </div>
   </div>
 
   <div class="repair">
     <div class="repair__head">
       <p>ЦЕНЫ НА УСЛУГИ</p>
     </div>
-    <div class="repair__container">
-      <div class="repair__container--slidePrice">
+    <div class="prices repair__container">
+      <div class="price-head-hidden repair__container--slidePrice ">
+        <div class="desc-price slidePrice-element">
+          <h6>Ремонтные услуги</h6>
+        </div>
         <div class="slidePrice-element">
+          <h6>Цена</h6>
+        </div>
+        <div class="slidePrice-element">
+          <h6>Срок</h6>
+        </div>
+        <div class="slidePrice-element"></div>
+      </div>
+
+      <div class="repair__container--slidePrice">
+        <div class="desc-price slidePrice-element">
           <h3>Ремонтные услуги</h3>
           <p>Тестирование с выдачей технического заключения</p>
         </div>
@@ -153,7 +179,7 @@
       </div>
 
       <div class="repair__container--slidePrice">
-        <div class="slidePrice-element">
+        <div class="desc-price slidePrice-element">
           <h3>Ремонтные услуги</h3>
           <p>Диагностика</p>
         </div>
@@ -169,7 +195,7 @@
       </div>
 
       <div class="repair__container--slidePrice">
-        <div class="slidePrice-element">
+        <div class="desc-price slidePrice-element">
           <h3>Ремонтные услуги</h3>
           <p>Замена дисплея</p>
         </div>
@@ -185,7 +211,7 @@
       </div>
 
       <div class="repair__container--slidePrice">
-        <div class="slidePrice-element">
+        <div class="desc-price slidePrice-element">
           <h3>Ремонтные услуги</h3>
           <p>Замена полифонического динамика</p>
         </div>
@@ -201,7 +227,7 @@
       </div>
 
       <div class="repair__container--slidePrice">
-        <div class="slidePrice-element">
+        <div class="desc-price slidePrice-element">
           <h3>Ремонтные услуги</h3>
           <p>Замена программного обеспечения</p>
         </div>
@@ -230,10 +256,10 @@
   </div>
 
   <footer class="footer">
-    <p class="footer__row">© 2019 CPS
+    <p class="footer__row-left">© 2019 CPS
       Разработано командой Apesong </p>
     <p class="footer__row">Политика конфиденциальности</p>
-    <p class="footer__row">Информация, размещенная на данной странице, не является публичной офертой</p>
+    <p class="footer__row-right">Информация, размещенная на данной странице, не является публичной офертой</p>
   </footer>
 
 </body>
