--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
         </ul>
         <ul class="burger-menu__list">
-          <li class="burger-menu__list--link-active">Ремонт техники</li>
+          <li class="burger-menu__list--link sidebar-active">Ремонт техники</li>
           <li class="burger-menu__list--link">Услуги и сервисы</li>
           <li class="burger-menu__list--link">Корпоративным клиентам</li>
           <li class="burger-menu__list--link">Продавцам техники</li>
@@ -115,7 +115,7 @@
         </ul>
 
         <ul class="burger-menu__list">
-          <li class="burger-menu__list--link-active">Ремонт техники</li>
+          <li class="burger-menu__list--link burger-active">Ремонт техники</li>
           <li class="burger-menu__list--link">Услуги и сервисы</li>
           <li class="burger-menu__list--link">Корпоративным клиентам</li>
           <li class="burger-menu__list--link">Продавцам техники</li>
@@ -249,7 +249,7 @@
         </div>
       </div>
       <div class="services__container">
-        <div class="services__container--slide">
+        <div class="services__container--slide services-active">
           Ремонтируемые устройства
         </div>
         <div class="services__container--slide">
@@ -268,12 +268,12 @@
     </div>
 
     <div class="about">
-      <div class="about-text">
-        <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell.
-          Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
-        <p class="about-text--hidden">
-          Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера</p>
-        <div class="about-text__more">
+      <div class="about-container">
+        <div class="about-text">
+          <p>Мы являемся авторизованным сервисным центром по ремонту техники Dell.
+            Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.</p>
+        </div>
+        <div id="about-more" class="about-text__more">
           <img src="./src/images/стрелка.svg">
           <p>Читать далее</p>
         </div>
@@ -286,7 +286,7 @@
         <p>РЕМОНТ ТЕХНИКИ РАЗЛИЧНЫХ БРЕНДОВ</p>
       </div>
       <div class="swiper">
-        <div class="swiper-wrapper repair__container">
+        <div class="brandCont swiper-wrapper repair__container">
           <div class="swiper-slide repair__container--slideBrand">
             <img class="logo-company" src="./src/images/lenovo.png">
             <button class="go-btn"><img src="./src/images/go.svg"></button>
@@ -311,10 +311,18 @@
             <img class="logo-company" src="./src/images/bosh.png">
             <button class="go-btn"><img src="./src/images/go.svg"></button>
           </div>
+          <div class="swiper-slide repair__container--slideBrand">
+            <img class="logo-company" src="./src/images/viewSonic.png">
+            <button class="go-btn"><img src="./src/images/go.svg"></button>
+          </div>
+          <div class="swiper-slide repair__container--slideBrand">
+            <img class="logo-company" src="./src/images/sony.png">
+            <button class="go-btn"><img src="./src/images/go.svg"></button>
+          </div>
         </div>
         <div class="swiper-pagination"></div>
       </div>
-      <div class="about-text__more-hidden">
+      <div id="moreBrand" class="about-text--hidden">
         <img src="./src/images/стрелка.svg">
         <p>Показать всё</p>
       </div>
@@ -325,7 +333,7 @@
         <p>РЕМОНТ РАЗЛИЧНЫХ ВИДОВ ТЕХНИКИ</p>
       </div>
       <div class="swiper">
-        <div class="swiper-wrapper repair__container">
+        <div class="techCont swiper-wrapper repair__container">
           <div class="swiper-slide repair__container--slideTech">
             <p class="rep_txt">Ремонт ноутбуков</p>
             <button class="go-btn"><img src="./src/images/go.svg"></button>
@@ -345,7 +353,7 @@
         </div>
         <div class="swiper-pagination"></div>
       </div>
-      <div class="about-text__more-hidden">
+      <div id="moreTech" class="about-text--hidden">
         <img src="./src/images/стрелка.svg">
         <p>Показать всё</p>
       </div>
@@ -470,6 +478,7 @@
   <script type="module" src="./src/js/swiper.js"></script>
   <script type="module" src="./src/js/modal.js"></script>
   <script type="module" src="./src/js/burger.js"></script>
+  <script type="module" src="./src/js/getMore.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
 </body>
