--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       </div>
       <div class="sidebar__bottom">
         <ul class="burger-menu__btns">
-          <li id="call-btn-burger" class="header__navigation--link">
+          <li id="sidebar-call-btn" class="header__navigation--link">
             <img src="./src/images/call.svg" />
           </li>
-          <li id="message-btn-burger" class="header__navigation--link">
+          <li id="sidebar-message-btn" class="header__navigation--link">
             <img src="./src/images/message.svg" />
           </li>
-          <li id="user-btn-burger" class="header__navigation--link">
+          <li id="sidebar-user-btn" class="header__navigation--link">
             <img src="./src/images/user.svg" />
           </li>
         </ul>
@@ -125,13 +125,13 @@
           <li class="burger-menu__list--link">Контакты</li>
         </ul>
         <ul class="burger-menu__btns">
-          <li id="call-btn-burger" class="header__navigation--link">
+          <li id="burger-call-btn" class="header__navigation--link">
             <img src="./src/images/call.svg" />
           </li>
-          <li id="message-btn-burger" class="header__navigation--link">
+          <li id="burger-message-btn" class="header__navigation--link">
             <img src="./src/images/message.svg" />
           </li>
-          <li id="user-btn-burger" class="header__navigation--link">
+          <li id="burger-user-btn" class="header__navigation--link">
             <img src="./src/images/user.svg" />
           </li>
         </ul>
